Fixed alignment on Gadget pages

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@
 }
 
 h1 {
-    text-align: center;
     font-family: system-ui, -apple-system, 
         BlinkMacSystemFont, 'Segoe UI', Roboto, 
         Oxygen, Ubuntu, Cantarell, 'Open Sans', 
@@ -31,8 +30,8 @@ img {
     display:block;
     height: auto;
     width: 600px;
-    margin-left: auto;
     margin-right: auto;
+    padding-left: 10%;
 }
 
 a {
@@ -42,4 +41,10 @@ a {
 /* Index.html */
 .gadget-list-item {
     text-align: center;
+}
+
+/* Gadget Pages */
+.gadget-header {
+    margin-right: auto;
+    padding-left: 20%;
 }
